src/deployments/keycloak/health-svc-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-health-svc
spec:
  ports:
    - name: keycloack-health
      port: replace_health_port
      protocol: TCP
      targetPort: replace_health_port
  selector:
    app: keycloak
