src/deployments/keycloak/httpbin-jwt-api-template.yaml
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: httpbin-no-op
spec:
  name: httpbin-no-op
  state: active
  active: true
  access_rights_array:
    - name: httpbin-no-op
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: product-httpbin
spec:
  name: product-httpbin
  state: active
  active: true
  partitions:
    quota: true
    rate_limit: true
  access_rights_array:
    - name: httpbin-jwt
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: plan-free
spec:
  name: plan-free
  state: active
  active: true
  partitions:
    acl: true
  rate: 10
  access_rights_array:
    - name: httpbin-jwt
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: plan-bronze
spec:
  name: plan-bronze
  state: active
  active: true
  partitions:
    acl: true
  rate: 50
  access_rights_array:
    - name: httpbin-jwt
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: plan-silver
spec:
  name: plan-silver
  state: active
  active: true
  partitions:
    acl: true
  rate: 500
  access_rights_array:
    - name: httpbin-jwt
      namespace: replace_namespace
      versions:
        - Default
---
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: plan-gold
spec:
  name: plan-gold
  state: active
  active: true
  partitions:
    acl: true
  rate: 10000
  access_rights_array:
    - name: httpbin-jwt
      namespace: replace_namespace
      versions:
        - Default
